...
  TranslationsEn([super.locale = 'en']);

  @override
  String get users => 'Users';

  @override
  String get chats => 'Chats';

  @override
  String get groups => 'Groups';

  @override
  String get more => 'More';
...
  String get close => 'Close';

  @override
  String get enterGroupName => 'Enter group name';

  @override
  String get addMembers => 'Add Members';

  @override
  String get sendMessage => 'Send Message';

  @override
  String get unblockUser => 'Unblock User';

  @override
  String get blockUser => 'Block User';

  @override
  String get deleteAndExit => 'Delete and Exit';

  @override
  String get leaveGroup => 'Leave Group';

  @override
  String get createGroup => 'Create Group';
...
  String get add => 'Add';

  @override
  String get noBannedMembersFound => 'No banned members found';

  @override
  String get bannedMembers => 'Banned Members';

  @override
  String get name => 'Name';

  @override
  String get scope => 'Scope';
...
  String get enterYourOption => 'Enter your option';

  @override
  String get addNewOption => 'Add new option';

  @override
  String get viewMembers => 'View Members';

  @override
  String get details => 'Details';

  @override
  String get notifications => 'Notifications';
...
  String get viewProfile => 'View Profile';

  @override
  String get sendMessageInPrivate => 'Send message privately';

  @override
  String get delete => 'Delete';

  @override
  String get deleteConfirm =>
      'Would you like to delete this conversation? This conversation will be deleted from all of your devices';

  @override
...

  @override
  String get sameLanguageMessage =>
      'Selected language for translation is similar to the language of original message';

  @override
  String get leave => 'Leave';

  @override
  String get tapToStartConversation => 'Tap to start conversation';

  @override
  String get customMessageLocation => '📍Location';
...

  @override
  String get confirmUnblockContact =>
      'Are you sure you want to unblock this contact?';

  @override
  String get groupInfo => 'Group Info';

  @override
  String get errorLeaveGroup => 'Error, Unable to leave group';

  @override
  String get errorDeleteGroup => 'Error, Unable to delete group';
...

  @override
  String get userInfo => 'User Info';
  @override
  String get voice => 'Voice';
  @override
  String get deleteTheChat => 'Delete Chat';
  @override
  String get block => 'Block';
  @override
  String get unBlock => 'Unblock';

  @override
...
